--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,23 +61,11 @@
 
 /*INICIO - PAINEL ADMINISTRATIVO*/
 
-.botao{
+.btn-primary{
   background-color: #2b2b3e;
-  font-size: 40px;
-  padding: 10px;
-  width: 500px;
-  height: 200px;
-  border-style: none;
-  margin: 25px;
-  cursor: pointer;
-  overflow: hidden;
-  color: #fff;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .botao{
-    margin: 10px;
-  }
+  border: none;
+  border-radius: 0;
+  min-width: 300px;
 }
 
 
